- CoatRack works without Config Server - Config server fixed - POM fixed from a possible mistake (The access of Maven to the resources, was configured to include and exclude the same files)

--- a/spring-boot/admin/src/main/resources/bootstrap.properties
+++ b/spring-boot/admin/src/main/resources/bootstrap.properties
@@ -5,3 +5,7 @@ spring.cloud.config.username: admin
 spring.cloud.config.password: password
 
 management.security.enabled=false
+
+#Offline Mode (No Config Cloud Needed- in case of testing please enable the Spring Cloud Config (Config Server))
+spring.cloud.config.enabled=false
+spring.profiles.active=test
