--- a/spring-boot/config-server/pom.xml
+++ b/spring-boot/config-server/pom.xml
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>eu.coatrack</groupId>
             <artifactId>coatrack-api</artifactId>
-            <version>0.5.2-2019W34</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         
         <dependency>
