--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -26,23 +26,21 @@
                 <filtering>true</filtering>
                 <includes>
                     <include>**/application*.yml</include>
-                    <include>**/application*.yaml</include>
                     <include>**/*.properties</include>
                     <!-- Also filter the footer and sidebar html to set the version number for display in GUI -->
                     <include>**/footer.html</include>
                     <include>**/sidebar.html</include>
                 </includes>
             </resource>
-           <!-- <resource>
+            <resource>
                 <directory>${basedir}/src/main/resources</directory>
                 <excludes>
                     <exclude>**/application*.yml</exclude>
-                    <exclude>**/application*.yaml</exclude>
-                    <exclude>**/bootstrap*.properties</exclude>
+                    <exclude>**/*.properties</exclude>
                     <exclude>**/footer.html</exclude>
                     <exclude>**/sidebar.html</exclude>
                 </excludes>
-            </resource> -->
+            </resource>
         </resources>
         <pluginManagement>
             <plugins>
