- config server pom.xml changed - Excluded src/test/resources of the license header update goal

--- a/pom.xml
+++ b/pom.xml
@@ -60,12 +60,8 @@
                             <!--<organizationName>Corizon | Institut für angewandte Systemtechnik Bremen GmbH (ATB)</organizationName>-->
                             <roots>
                                 <root>src/main/java</root>
-                                <root>src/test</root>
+                                <root>src/test/java</root>
                             </roots>
-                            <!-- This will exclude the license maven plugin to write headers on the properties files in the resources folder located on the tests folder -->
-                            <excludes>
-                                <exclude>src/test/resources</exclude>
-                            </excludes>
                         </configuration>
                     </execution>
                 </executions>
