--- a/spring-boot/admin/src/test/resources/bootstrap.properties
+++ b/spring-boot/admin/src/test/resources/bootstrap.properties
@@ -1,3 +1,8 @@
+spring.application.name=ygg-admin
+spring.cloud.config.uri=https://config.coatrack.eu
+#spring.cloud.config.uri=http://localhost:8998
+spring.cloud.config.username: admin
+spring.cloud.config.password: password
 management.security.enabled=false
 
 spring.cloud.config.enabled=false
