--- a/spring-boot/admin/src/test/resources/bootstrap.properties
+++ b/spring-boot/admin/src/test/resources/bootstrap.properties
@@ -1,7 +1,7 @@
 spring.application.name=ygg-admin
-spring.cloud.config.uri=https://config.coatrack.eu
-spring.cloud.config.username= admin
-spring.cloud.config.password= password
+spring.cloud.config.uri=https://test-dummy-config-url.coatrack.eu
+spring.cloud.config.username= dummyTestUsername
+spring.cloud.config.password= dummyTestPassword
 management.security.enabled=false
 
 spring.cloud.config.enabled=false
